# dryout

./: .gitignore  CMakeLists.txt  README.md
docs/: OPENSOURCE.md
docs/developer/: todo.md
docs/user/: quickstart.md
res/shaders/: basic_shader.frag  default_shader.frag  default_shader.vert  frame_shader.frag  frame_shader.vert
scripts/: TexturePacker.py
src/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt
src/core/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraManager.cpp  CameraManager.hpp  Clock.cpp  Clock.hpp  InputManager.cpp  InputManager.hpp  ResourceManager.cpp  ResourceManager.hpp
src/game/: CMakeLists.txt  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  Player.cpp  Player.hpp  Tile.cpp  Tile.hpp
src/graphics/: CMakeLists.txt  Graphics.cpp  Graphics.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/renderer/: CMakeLists.txt  Light.cpp  Light.hpp  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp
src/utils/: CMakeLists.txt
